external-crates/move/crates/move-compiler/tests/move_check/parser/phantom_param_invalid_keyword.move
module 0x42::M {
    struct S<T1, phatom T2> {
        a: T1
    }
}
